tests/ui/traits/next-solver/normalize-async-closure-in-trait.stderr
error[E0271]: type mismatch resolving `impl Future<Output = ()> == {async fn body@$DIR/normalize-async-closure-in-trait.rs:6:20: 6:22}`
  --> $DIR/normalize-async-closure-in-trait.rs:6:20
   |
LL |     async fn bar() {}
   |                    ^^ types differ

error[E0271]: type mismatch resolving `{async fn body@$DIR/normalize-async-closure-in-trait.rs:6:20: 6:22} <: impl Future<Output = ()>`
  --> $DIR/normalize-async-closure-in-trait.rs:6:20
   |
LL |     async fn bar() {}
   |                    ^^ types differ

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
