tests/ui/traits/next-solver/normalize-async-closure-in-trait.rs
//@ compile-flags: -Znext-solver
//@ known-bug: unknown
//@ edition:2021

trait Foo {
    async fn bar() {}
}

fn main() {}
